--- a/sites/all/themes/picsforpets/sass/partials/04-defaults/forms/_form-defaults.sass
+++ b/sites/all/themes/picsforpets/sass/partials/04-defaults/forms/_form-defaults.sass
@@ -32,7 +32,6 @@ label
   font-size: 12px
   // @extend %gray-white-radial
 
-select,
 input
   +box-shadow(#ddd 0 0 10px inset)
   border: 1px solid #C9CBCD
