--- a/sites/all/themes/picsforpets/sass/pfp-design/_design.sass
+++ b/sites/all/themes/picsforpets/sass/pfp-design/_design.sass
@@ -401,6 +401,9 @@ select#edit-sort-by
 #webform-client-form-3
   margin: 0 auto
   width: 552px
+  select
+    +box-shadow(#ddd 0 0 10px inset)
+    border: 1px solid #C9CBCD
   legend
     margin-left: -20px
   label
